--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "stream": "^0.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
