[MOD] repo name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Smart-Intent-Hub",
+  "name": "SmartIntentHub",
   "version": "1.0.0",
   "description": "AI customer exec",
   "main": "index.js",
